feat(crm): enforce ownership and record sharing (#1602)